--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
-    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.3",
-    "jwt-decode": "^4.0.0",
-    "mongoose": "^8.20.1",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-router-dom": "^7.10.1"
+    "mongoose": "^9.0.0"
   }
 }
